--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="dshbox rpl" id="frm_btn" onclick = "window.location = 'forum.html'">Forum</div>
             <div class="dshbox rpl" id="qba_btn">Question Bank</div>
             <div class="dshbox rpl" id="sim_btn">Simulations</div>
-            <div class="dshbox rpl" id="cyb_btn">Cyberhunts</div>
+            <div class="dshbox rpl" id="cyb_btn" style="display:none">Cyberhunts</div>
             <div id="adminonly" style="display:none;">
                 <div class="dshbox rpl" id="adi_btn">Add</div>
                 <div class="dshbox rpl" id="pqb_btn">Print</div>
