--- a/forum.html
+++ b/forum.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum - MTT</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="favicon.png" type="image/icon type">
 </head>
 <body>
     <div id="watermark" style="display: flex; flex-direction: row;align-items: center;width:98vw;position: relative;">
@@ -22,7 +23,7 @@
         </div>
         <div>
             <input type="text" id="fm_message" class="_in_aq" placeholder="Message">
-            <button class="tst_btn" id="fm_send">Send</button>
+            <button class="tst_btn rpl" id="fm_send">Send</button>
         </div>
 
     </div>
