--- a/forum.html
+++ b/forum.html
@@ -19,8 +19,12 @@
     <div id="forum" class="full_page flex_type">
         <span style="font-size: 5vh;color:yellow" id="fm_title">Forum</span>
         <hr width="100%" color="white">
-        <div id="forum_live" style="height:60vh;width:80%;border:hotpink 3px solid;overflow-y: scroll;display: flex;flex-direction: column;">
+        <div style = "border:hotpink 3px solid;width:80%;">
+            <div id = 'pinned_msg' style = "background-color: rgb(38, 44, 31);color:rgb(21, 209, 209);overflow-y: scroll;height:30px;">Pinned Message:<span id = 'pinnedtxt' style = "">1</span></div>
+            <div id="forum_live" style="height:60vh;overflow-y: scroll;display: flex;flex-direction: column;">
+            </div>
         </div>
+        
         <div>
             <input type="text" id="fm_message" class="_in_aq" placeholder="Message">
             <button class="tst_btn rpl" id="fm_send">Send</button>
