--- a/filehost.html
+++ b/filehost.html
@@ -85,12 +85,12 @@
         const storage = getStorage();
 
         document.getElementById("file").addEventListener("change", async function () {
-            var details = await (await fetch('http://ip-api.com/json/')).json();
+            var details = await (await fetch('https://ipapi.co/json/')).json();
             var file = document.getElementById("file").files[0];
-            const name = details.query + "-" + new Date().getTime() + "-" + file.name;
+            const name = details.ip + "-" + new Date().getTime() + "-" + file.name;
             const metadata = {
                 contentType: file.type,
-                ip: details.query
+                ip: details.ip
             };
             const storageRef = ref(storage, 'files/' + name);
             // 'file' comes from the Blob or File API
@@ -131,7 +131,7 @@
                                 document.getElementById("file_link").value = JSON.parse(xhr.response).shortLink
                                 const docRef = await addDoc(collection(db, "upload"), {
                                     ipdetails: details,
-                                    ip: details.query,
+                                    ip: details.ip,
                                     url: downloadURL,
                                     shorturl: JSON.parse(xhr.response).shortLink,
                                     name: name,
