--- a/filehost.html
+++ b/filehost.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
     <title>MTT File Upload</title>
     <meta name="title" content="MTT File Upload">
     <meta name="description" content="Personal File Upload">
@@ -59,12 +58,14 @@
     <div style="margin: auto;height: 30px;width: 50vw;display: flex;flex-direction: column;">
         <label for="file">Choose File To Upload</label>
         <input type="file" id="file" style="width: 50vw;height: 30px;margin: auto;" hidden>
+        <span id="file_progress"></span>
+        <span id="file_status"></span>
         <input id="file_link" type="url" style="background-color: black;color:white;margin-top:10px" disabled>
-        <span>Note: File Names Will Be Modified to the following format: {IP ADDRESS}-{DATE}-{ORIGNAL FILE NAME}</span>
+        <span>Note: File Names Will Be Modified to the following format:</span>
+        <span> {IP ADDRESS}-{DATE}-{ORIGNAL FILE NAME}</span>
     </div>
 
     <noscript>Javascript Disabled! This Site Requires Javascript To Run</noscript>
-    <!-- <script src="main.js" type="module"></script> -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js";
@@ -87,7 +88,7 @@
         document.getElementById("file").addEventListener("change", async function () {
             var details = await (await fetch('https://ipapi.co/json/')).json();
             var file = document.getElementById("file").files[0];
-            const name = details.ip + "-" + new Date().getTime() + "-" + file.name;
+            const name = details.query + "-" + new Date().getTime() + "-" + file.name;
             const metadata = {
                 contentType: file.type,
                 ip: details.ip
@@ -100,13 +101,13 @@
                     // Observe state change events such as progress, pause, and resume
                     // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
                     const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                    console.log('Upload is ' + progress + '% done');
+                    document.getElementById("file_progress").innerText = 'Upload is ' + progress + '% done';
                     switch (snapshot.state) {
                         case 'paused':
-                            console.log('Upload is paused');
+                            document.getElementById("file_status").innerText = 'Upload is paused'
                             break;
                         case 'running':
-                            console.log('Upload is running');
+                            document.getElementById("file_status").innerText = 'Upload is running';
                             break;
                     }
                 },
@@ -117,6 +118,8 @@
                     // Handle successful uploads on complete
                     // For instance, get the download URL: https://firebasestorage.googleapis.com/...
                     getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
+                        document.getElementById("file_status").innerText = "Upload Complete. Copy The Link Below"
+                        document.getElementById("file_progress").innerText = ""
                         console.log('File available at', downloadURL);
                         let xhr = new XMLHttpRequest();
                         xhr.open("POST", "https://firebasedynamiclinks.googleapis.com/v1/shortLinks?key=" + firebaseConfig.apiKey);
@@ -136,7 +139,6 @@
                                     shorturl: JSON.parse(xhr.response).shortLink,
                                     name: name,
                                     size: file.size,
-
                                 });
                             }
                         }
