--- a/filehost.html
+++ b/filehost.html
@@ -93,7 +93,7 @@
                 contentType: file.type,
                 ip: details.ip
             };
-            const storageRef = ref(storage, 'files/' + name);
+            const storageRef = ref(storage, 'files/'+ details.ip.replaceAll(".","_") + "/" + name);
             // 'file' comes from the Blob or File API
             const uploadTask = uploadBytesResumable(storageRef, file);
             uploadTask.on('state_changed',
@@ -112,6 +112,8 @@
                     }
                 },
                 (error) => {
+                    document.getElementById("file_status").innerText = 'Upload abandoned'
+                    document.getElementById("file_progress").innerText = ""
                     // Handle unsuccessful uploads
                 },
                 () => {
