--- a/filehost.html
+++ b/filehost.html
@@ -63,6 +63,7 @@
         <input id="file_link" type="url" style="background-color: black;color:white;margin-top:10px" disabled>
         <span>Note: File Names Will Be Modified to the following format:</span>
         <span> {IP ADDRESS}-{DATE}-{ORIGNAL FILE NAME}</span>
+        <span>Max File Upload Size: 50mb</span>
     </div>
 
     <noscript>Javascript Disabled! This Site Requires Javascript To Run</noscript>
