--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body ondragstart="return false;" onselectstart="return false;" oncontextmenu="return false;" onblur="clearData();">
-    <div id="overlay" style="display:none;position: fixed; width: 100%;height: 100%;top: 0;left: 0;right: 0;bottom: 0;background-color: rgb(0, 0, 0);z-index: 2;cursor: pointer;">
+    <div id="overlay" style="position: fixed; width: 100%;height: 100%;top: 0;left: 0;right: 0;bottom: 0;background-color: rgb(0, 0, 0);z-index: 2;cursor: pointer;">
         <div
             style="font-family: Consolas;color:white;top: 50%;left: 50%;position: absolute;transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);">
             <span id="logo" style="font-family: Arial;font-size: 4vh;font-weight: bold; margin-left: 2vw;"><img
