--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
         <hr color="white" width="100%" class="no-print">
         <span><button class="tst_btn rpl no-print" onclick="print()">Print</button><button class="tst_btn rpl no-print"
                 id="shf_btn">Shuffle</button><button class="tst_btn rpl no-print" id="tsinf_btn">Bank
-                Info</button></span>
+                    Info</button><button class="tst_btn rpl no-print" id="tans_btn">With Answers</button><button class="tst_btn rpl no-print" id="tansexpl_btn">Bank
+                        With Explanation And Answer</button><button class="tst_btn rpl no-print" id="tremove_btn">Remove All</button></span>
         <hr color="white" width="100%">
         <span style="font-size: 3vh;" id="qb_title">ERROR</span>
         <hr color="white" width="100%">
@@ -621,7 +622,8 @@
             </div>
         </div>
     </div>
-    
+    <div id="batchedit" class="full_page flex_type">  
+    </div>
     <div id="qbnk_vid" class="full_page flex_type" style="height:90vh;position: relative;">
         <button id = "qbnk_vid_btn" class = "tst_btn rpl">Start</button>
         <button id = "qbnk_vid_btn_e" class = "tst_btn rpl" style="display: none;">Stop</button>
