--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             </div>
             <div id="tp_hint" style="display: none;">Hint</div>
             <div id="tp_e_answer" style="display: none;">Answer</div>
-            <div id="tp_expl" style="display: none;">Explanation</div>
+            <div id="tp_a_expl" style="display: none;">Explanation</div>
         </div>
     </div>
     <div id="chapter" class="full_page flex_type">
